PharmaDemo/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Call_Indicator__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chs=45x30&amp;chf=bg,s,FFFFFF&amp;chd=t:&quot; &amp; TEXT( Contact.pc_Target_Calls__c  ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diet__c</fullName>
        <label>Diet</label>
        <picklist>
            <picklistValues>
                <fullName>Coeliac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nut Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EncryptedKey__c</fullName>
        <label>EncryptedKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , Contact.Full_Name__c ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSVP-Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , Contact.Spec__r.Name ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speciality</label>
        <type>Text</type>
    </fields>
</CustomObject>